force-app/main/default/objects/endpoint__mdt/fields/default_owner__c.field-meta.xml
<CustomField>
    <fullName>default_owner__c</fullName>
    <label>default owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>