force-app/main/default/objects/endpoint__mdt/fields/env__c.field-meta.xml
<CustomField>
    <fullName>env__c</fullName>
    <label>env</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>dev</fullName>
                <default>true</default>
                <label>dev</label>
            </value>
            <value>
                <fullName>prod</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>