force-app/main/default/objects/endpoint__mdt/fields/list_raw_response__c.field-meta.xml
<CustomField>
    <fullName>list_raw_response__c</fullName>
    <label>list_raw_response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>