force-app/main/default/objects/endpoint__mdt/fields/raw_response__c.field-meta.xml
<CustomField>
    <fullName>raw_response__c</fullName>
    <label>raw_response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>