force-app/main/default/objects/endpoint__mdt/fields/timer__c.field-meta.xml
<CustomField>
    <fullName>timer__c</fullName>
    <label>timer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>